--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Createing app for superadmin",
-  "main": "index.js",
+  "main": "app.ts",
   "author": "Vidychat",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "ts-node src/app.ts",
     "lint": "eslint ."
   },
   "devDependencies": {
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "husky": "^8.0.3"
   }
 }
