--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node src/app.ts",
-    "lint": "eslint ."
+    "lint:fix": "eslint --fix ./*js/ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
