feat: login is working now

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ BACKEND_URL = http://localhost:4000
 
 PORT = 4050
 
-MONGO_URI = mongodb+srv://amitsarraf:S%40m12345@flat-service.qartbfp.mongodb.net/vidychat?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://amitsarraf:S%40m12345@flat-service.qartbfp.mongodb.net/superAdmin?retryWrites=true&w=majority
